tests/baselines/reference/Protected9.errors.txt
tests/cases/conformance/parser/ecmascript5/Protected/Protected9.ts(2,26): error TS1005: '=' expected.
tests/cases/conformance/parser/ecmascript5/Protected/Protected9.ts(2,26): error TS2304: Cannot find name 'p'.


==== tests/cases/conformance/parser/ecmascript5/Protected/Protected9.ts (2 errors) ====
    class C {
       constructor(protected p) { }
                             ~
!!! error TS1005: '=' expected.
                             ~
!!! error TS2304: Cannot find name 'p'.
    }